--- a/insight-stage-master1/public/css/app.css
+++ b/insight-stage-master1/public/css/app.css
@@ -142,7 +142,7 @@ text-decoration:none;
   /*MEMBERS**/
   @import url(//fonts.googleapis.com/css?family=Montserrat:300,500);
 .team4 {
-  font-family: sans-serif;
+  font-family: "Open Sans";
 	color: #8d97ad;
   font-weight: 300;
   justify-content:center;
@@ -152,7 +152,7 @@ text-decoration:none;
   color: #3e4555;
 }
 .team4 .font-weight-medium {
-   font-family: "Coves";
+   font-family: "Open Sans";
    font-weight: 40px;
    line-height: 22px;
    
@@ -189,5 +189,170 @@ text-decoration:none;
   color: #E1A042;
 }
 
-/***************ARTICLE PAGE-Type 1*****************/
+
+/*********************Contact Form AND Newsletter*************************/
+@media (max-width: 767px) { 
+  .submit{
+    margin-top:4%;
+    margin-bottom:8%;
+  }
+  #riscos{
+    display: none;
+  }
+}
+
+
+
+@media screen and (max-width: 1199px) and (min-width: 768px ) { 
+.shadow{
+  width:16rem;
+  height:18rem;
+}
+#riscos{
+  display: none;
+}
+.submit{
+    margin-top:8%;
+    margin-bottom:8%;
+  }
+  #textt{
+    font-size:25px;
+  }
+}
+
+
+
+
+@media (min-width: 1200px) { 
+.shadow{
+  width:auto;
+  height:17.5rem;
+}
+#textt{
+  font-size:33px;
+  }
+
+
+}
+.form-net {
+border-color:#E1A042;
+border-radius: 0;
+border-width: 0.1rem;
+}
+
+.form-net:focus {
+border-color: #E1A042;
+box-shadow: 0 0 0 0.1rem rgba(255, 136, 0, 0.6) !important;
+}
+
+.newsletter{
+text-align: center;
+padding: 6px 10px;
+min-width: 177px;
+border-radius: 10px;
+display: inline-block;
+border: solid 2px white;
+background: transparent;
+color:white;
+outline:none;
+
+}
+
+.subscribe{
+display: inline-block;
+font-weight: 400;
+text-align: center;
+white-space: nowrap;
+vertical-align: middle;
+border: solid 2px white;
+padding: 0.375rem 0.75rem;
+font-size: 1rem;
+line-height: 1.5;
+border-radius: 25px;
+transition: none;
+border: solid 2px white;
+color:white;
+background:transparent;
+}
+.subscribe:hover {
+border-radius: 25px;
+color:#E1A042 ;
+border: solid 2px white;
+background-color: white;
+outline:none;
+}
+
+/***************ARTICLE PAGE Submit -Type 1*****************/
+
+input{
+    
+}
+label{
+    color:black;
+}
+#yourBtn {
+    font-family: "Open Sans";
+    width: 200px;
+    margin-top: 10px;
+    position: relative;
+    border-radius: 25px;
+    color: black;
+    background-color:white ;
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;  
+}
+#yourBtn:hover{
+    font-family: "Open Sans";
+    width: 200px;
+    margin-top: 10px;
+    position: relative;
+    border-radius: 25px;
+    color: white;
+    background-color:#E1A042 ;
+    border:1px solid #E1A042;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;  
+
+}
+
+.form-control{
+    font-size:15px;
+  font-family: "Open Sans";
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border: 1px solid black;
+  text-align: left;
+  background-color: white;
+}
+.form-control:focus {
+   box-shadow:none;
+   border:1px solid #E1A042
+}
+.title{
+    text-align:center;
+}
+.col-4{
+    text-align:center;
+}
+.sub{
+    font-family: "Open Sans";
+    width: 150px;
+    -webkit-border-radius: 10px;
+    color: black;
+    font-weight: bold;
+    -moz-border-radius: 20px;
+    border: 1px Solid black;
+    text-align: center;
+    background-color: white;
+}
+
+
+
 
